<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/y70"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/x102"
        android:layout_height="@dimen/y63"
        android:id="@+id/Item_picture"
        android:layout_marginRight="@dimen/x12"
        android:layout_centerVertical="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mainpage_RecyclerView_item_name_default"
        android:id="@+id/Item_name"
        android:layout_marginTop="@dimen/y6"
        android:textSize="@dimen/Mainpage_RecyclerView_item_name_textSize"
        android:layout_marginLeft="@dimen/x12"
        android:textColor="@color/colorHeavyGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mainpage_RecyclerView_item_address_default"
        android:id="@+id/Item_address"
        android:layout_below="@+id/Item_name"
        android:layout_alignLeft="@+id/Item_name"
        android:layout_alignStart="@+id/Item_name"
        android:textSize="@dimen/Mainpage_RecyclerView_item_address_textSize"
        android:textColor="@color/colorLightGray"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mainpage_RecyclerView_item_lowerest_wholesale_default"
        android:id="@+id/Item_lowerest_wholesale"
        android:layout_below="@+id/Item_name"
        android:layout_toRightOf="@+id/Item_address"
        android:layout_toEndOf="@+id/Item_address"
        android:paddingLeft="@dimen/x3"
        android:paddingStart="@dimen/x3"
        android:textSize="@dimen/Mainpage_RecyclerView_item_lowerest_wholesale_textSize"
        android:textColor="@color/colorLightGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mainpage_RecyclerView_item_lowerest_wholesale_number_default"
        android:id="@+id/Item_lowerest_wholesale_number"
        android:layout_below="@+id/Item_name"
        android:layout_toRightOf="@+id/Item_lowerest_wholesale"
        android:layout_toEndOf="@+id/Item_lowerest_wholesale"
        android:textSize="@dimen/Mainpage_RecyclerView_item_lowerest_wholesale_number_textSize"
        android:textColor="@color/colorLightGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mainpage_RecyclerView_item_price_default"
        android:id="@+id/Item_price"
        android:layout_alignLeft="@+id/Item_name"
        android:layout_alignStart="@+id/Item_name"
        android:textSize="@dimen/Mainpage_RecyclerView_item_price_textSize"
        android:textColor="@color/colorLightRed"
        android:layout_marginBottom="@dimen/y6"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/colorLightGray"
        android:layout_alignParentBottom="true">
    </RelativeLayout>

</RelativeLayout>